# nexgit

./: .gitignore  .markdownlint-cli2.yaml  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.json  maintainers.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  project-task.yml
.github/workflows/: check.yml  docs.yml  issue-claim-deadlines.yml  issue-intake.yml  label-sync.yml  pr-hygiene.yml  pr-routing.yml  stale.yml  triage-commands.yml  triage-recap.yml  welcome.yml
apps/cli/: Cargo.toml
apps/cli/src/: args.rs  main.rs
apps/cli/src/commands/: mod.rs
apps/cli/src/server/: handler.rs  mod.rs  state.rs  stdio.rs  unix.rs  websocket.rs
apps/cli/src/tui/: app.rs  events.rs  mod.rs  ui.rs
apps/desktop/: electron.vite.config.ts  eslint.config.mjs  package.json  tsconfig.json
apps/desktop/src/main/: cli-server.ts  index.ts  ipc.ts
apps/desktop/src/preload/: index.ts
crates/core/: Cargo.toml
crates/core/src/: auth.rs  error.rs  github.rs  lib.rs  repo.rs  stack.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
docs/: README.md  architecture.md  club-guide.md  development.md  environments.md  glossary.md  maintainers.md  onboarding.md  tooling.md
docs/product/: README.md  protocol-stability.md
docs/product/foundation/: dependency-decisions.md  milestones.md  vision.md
(+5 files in other folders)
