[workspace]
resolver = "2"
members = [
  "apps/cli",
  "crates/core",
  "crates/protocol",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Nexgit contributors"]
repository = "https://github.com/Codelab-Davis/nexgit"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.28"
futures-util = "0.3"
nexgit-core = { path = "crates/core" }
nexgit-protocol = { path = "crates/protocol" }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
